--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,225 @@
+absl-py==0.14.1
+aiohttp @ file:///opt/concourse/worker/volumes/live/7459ede7-4127-4002-7052-a1f885262714/volume/aiohttp_1614360978938/work
+appdirs==1.4.4
+appnope==0.1.2
+argon2-cffi==20.1.0
+astor==0.8.1
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==3.0.1
+attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
+backcall==0.2.0
+backports.entry-points-selectable==1.1.0
+backports.functools-lru-cache @ file:///tmp/build/80754af9/backports.functools_lru_cache_1618170165463/work
+backports.tempfile @ file:///home/linux1/recipes/ci/backports.tempfile_1610991236607/work
+backports.weakref==1.0.post1
+backports.zoneinfo==0.2.1
+beautifulsoup4 @ file:///home/linux1/recipes/ci/beautifulsoup4_1610988766420/work
+bleach==1.5.0
+blinker==1.4
+boltons==20.2.1
 Brotli==1.0.9
-click==8.0.4
+brotlipy==0.7.0
+cached-property==1.5.2
+cachetools==4.2.4
+certifi==2021.10.8
+cffi @ file:///opt/concourse/worker/volumes/live/48a8e59c-d46a-476e-668b-0a7bcc9c0827/volume/cffi_1613246931795/work
+chardet @ file:///opt/concourse/worker/volumes/live/c2acde30-2441-46c0-4d3b-134f00160171/volume/chardet_1605303188729/work
+charset-normalizer==2.0.7
+click @ file:///tmp/build/80754af9/click_1621604852318/work
+cloudpickle==1.6.0
+conda==4.10.3
+conda-build==3.0.22
+conda-package-handling @ file:///opt/concourse/worker/volumes/live/d180d59d-429d-4793-7e56-ebcf06e9bbdb/volume/conda-package-handling_1618262142264/work
+conda-verify==3.4.2
+contextlib2==0.6.0.post1
+coverage @ file:///opt/concourse/worker/volumes/live/aa96dc61-03a4-4f95-77ba-29dfe6dcc93a/volume/coverage_1614614853414/work
+cryptography @ file:///opt/concourse/worker/volumes/live/806790c7-13c6-41bc-7395-be030ef629d2/volume/cryptography_1616769285001/work
+cvxopt==1.2.5
+cvxpy==1.0.14
+cycler==0.10.0
+Cython @ file:///opt/concourse/worker/volumes/live/5c95e2db-7a51-42c5-4b44-3fdfe037566b/volume/cython_1618435150816/work
 dash==2.3.0
+dash-bootstrap-components==1.0.3
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 
+decorator==4.4.2
+deeplift==0.6.13.0
+defusedxml==0.7.1
+deprecation==2.1.0
+dill @ file:///tmp/build/80754af9/dill_1605066453875/work
+distlib==0.3.3
+ecos @ file:///opt/concourse/worker/volumes/live/bfabf99c-f671-475d-4c5f-47ddd7cc99a6/volume/ecos_1614178247846/work
+eli5==0.11.0
+entrypoints==0.3
+enum34==1.1.10
+fastcache==1.1.0
+filelock==3.3.1
 Flask==2.0.3
 Flask-Compress==1.11
-gunicorn==20.1.0
+flatbuffers==1.12
+future==0.18.2
+gast==0.4.0
+glob2 @ file:///home/linux1/recipes/ci/glob2_1610991677669/work
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+graphviz==0.16
+grpcio==1.41.0
+h5py==3.1.0
+html5lib==0.9999999
+idna==3.3
+idna-ssl @ file:///opt/concourse/worker/volumes/live/e66f6c3c-afee-4206-6064-cf221eb812dc/volume/idna_ssl_1611752479447/work
+imageio==2.9.0
 importlib-metadata==4.8.3
+importlib-resources==5.2.2
+install==1.3.4
+ipykernel==5.5.5
+ipython==7.16.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
 itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
+jedi==0.18.0
+Jinja2 @ file:///tmp/build/80754af9/jinja2_1621238361758/work
+joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1633637554808/work
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.3.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+keras==2.6.0
+Keras-Applications==1.0.8
+keras-nightly==2.7.0.dev2021100607
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+libclang==11.1.0
+lime==0.2.0.1
+llvmlite==0.36.0
+Markdown @ file:///opt/concourse/worker/volumes/live/03d8c644-eb72-4044-78c2-7dbe22b6567f/volume/markdown_1614363827435/work
+MarkupSafe @ file:///opt/concourse/worker/volumes/live/16a820f0-3874-45b4-6b79-5313238ead21/volume/markupsafe_1621528157387/work
+matplotlib==3.3.4
+mcrforest @ git+https://github.com/gavin-s-smith/mcrforest@f9518632aff4355fc6f0f81a5bd85d371447cdcc
+mistune==0.8.4
+mkl-fft==1.3.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+mock==4.0.3
+multidict @ file:///opt/concourse/worker/volumes/live/5ecbcea4-c79d-49a8-53ef-a4f28f0caa1e/volume/multidict_1607367779404/work
+multiprocess @ file:///Users/runner/miniforge3/conda-bld/multiprocess_1592290940328/work
+natsort==7.1.1
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+networkx==2.5
+notebook==6.2.0
+np-utils==0.5.12.1
+numba @ file:///opt/concourse/worker/volumes/live/5b1b1d36-748c-47c0-59d5-116d33a74f16/volume/numba_1616774235156/work
+numpy==1.19.5
+oauthlib==3.1.1
+olefile==0.46
+opencv-python==4.4.0.44
+opt-einsum==3.3.0
+osqp==0.6.1
+package-name==0.1
+packaging==20.9
+panda==0.3.1
+pandas==1.1.5
+pandocfilters==1.4.3
+parso==0.8.2
+patsy==0.5.1
+pexpect==4.8.0
+pickleshare==0.7.5
+piexif==1.1.3
+Pillow @ file:///opt/concourse/worker/volumes/live/d0757663-0751-456b-5d22-3c7bd181f2a1/volume/pillow_1617386150680/work
+pkginfo==1.7.0
+platformdirs==2.4.0
 plotly==5.6.0
-six==1.16.0
+prometheus-client==0.9.0
+prompt-toolkit==3.0.20
+protobuf==3.18.1
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycosat==0.6.3
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+Pygments==2.10.0
+PyJWT==1.7.1
+pynndescent @ file:///home/conda/feedstock_root/build_artifacts/pynndescent_1634311711350/work
+pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
+pyparsing==2.4.7
+pyreadr==0.3.5
+pyrsistent==0.17.3
+pysaliency==0.2.20
+PySocks @ file:///opt/concourse/worker/volumes/live/286ddfa9-f2fd-40b3-4c68-b14dbfd7c9fa/volume/pysocks_1605305809963/work
+python-dateutil==2.8.2
+pytz==2021.1
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.1.1
+PyYAML==5.4.1
+pyzmq==22.2.1
+qtconsole==5.0.3
+QtPy==1.9.0
+regressors==0.0.3
+requests==2.26.0
+requests-oauthlib==1.3.0
+rpy2==3.4.5
+rsa @ file:///tmp/build/80754af9/rsa_1614366226499/work
+ruamel-yaml-conda @ file:///opt/concourse/worker/volumes/live/3691cad8-1bba-497e-4109-460bac08a255/volume/ruamel_yaml_1616016694353/work
+ruamel.yaml==0.16.13
+ruamel.yaml.clib==0.2.2
+saliency==0.1.1
+schema==0.7.4
+scikit-image==0.17.2
+scikit-learn==0.24.1
+scipy==1.4.1
+scs==2.1.2
+seaborn==0.11.1
+Send2Trash==1.5.0
+shap==0.39.0
+six @ file:///opt/concourse/worker/volumes/live/5839b2d2-7415-4ff0-4c61-c4cddf798f7c/volume/six_1605205320479/work
+sklearn==0.0
+slicer==0.0.7
+soupsieve @ file:///tmp/build/80754af9/soupsieve_1616183228191/work
+spgl1==0.0.2
+statsmodels==0.12.2
+tabulate==0.8.9
+tb-nightly==2.6.0a20210806
 tenacity==8.0.1
-typing_extensions==4.1.1
-Werkzeug==2.0.3
+tensorboard==1.13.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+tensorflow-tensorboard==0.4.0
+termcolor==1.1.0
+terminado==0.9.3
+testpath==0.4.4
+tf-estimator-nightly==2.7.0.dev2021092408
+tf-nightly==2.7.0.dev20210806
+threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1633102299089/work
+tifffile==2020.9.3
+toolz @ file:///home/linux1/recipes/ci/toolz_1610987900194/work
+torch==1.6.0
+torchvision==0.7.0
+tornado==6.1
+tqdm @ file:///tmp/build/80754af9/tqdm_1615925068909/work
+traitlets==4.3.3
+typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1611751222202/work
+tzdata==2021.5
+tzlocal==4.1
+umap-learn @ file:///Users/runner/miniforge3/conda-bld/umap-learn_1622652233798/work
+urllib3==1.26.7
+vimpy==2.0.2.2
+virtualenv==20.8.1
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.2
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+yarl @ file:///opt/concourse/worker/volumes/live/e20b82dc-eefe-4ef5-7c9e-051d84df2439/volume/yarl_1606940012390/work
 zipp==3.6.0
