--- a/requirements.txt
+++ b/requirements.txt
@@ -1,180 +1,21 @@
-absl-py==0.14.1
-appdirs==1.4.4
-appnope==0.1.2
-argon2-cffi==20.1.0
-astor==0.8.1
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==3.0.1
-backcall==0.2.0
-backports.entry-points-selectable==1.1.0
-backports.weakref==1.0.post1
-backports.zoneinfo==0.2.1
-bleach==1.5.0
-blinker==1.4
-boltons==20.2.1
-Brotli==1.0.9
-brotlipy==0.7.0
-cached-property==1.5.2
-cachetools==4.2.4
-certifi==2021.10.8
-charset-normalizer==2.0.7
-cloudpickle==1.6.0
-cvxpy==1.0.14
-cycler==0.10.0
-dash==2.3.0
 dash-bootstrap-components==1.0.3
+Brotli==1.0.9
+click==8.0.4
+dash==2.3.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
-
-decorator==4.4.2
-deeplift==0.6.13.0
-defusedxml==0.7.1
-deprecation==2.1.0
-distlib==0.3.3
-eli5==0.11.0
-entrypoints==0.3
-enum34==1.1.10
-fastcache==1.1.0
-filelock==3.3.1
+dataclasses==0.8
 Flask==2.0.3
 Flask-Compress==1.11
-flatbuffers==1.12
-future==0.18.2
-gast==0.4.0
-google-auth==1.35.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-graphviz==0.16
-grpcio==1.41.0
-h5py==3.1.0
-html5lib==0.9999999
-idna==3.3
-imageio==2.9.0
+gunicorn==20.1.0
 importlib-metadata==4.8.3
-importlib-resources==5.2.2
-install==1.3.4
-ipykernel==5.5.5
-ipython==7.16.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
 itsdangerous==2.0.1
-jedi==0.18.0
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.3.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-keras==2.6.0
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-libclang==11.1.0
-lime==0.2.0.1
-llvmlite==0.36.0
-matplotlib==3.3.4
-mistune==0.8.4
-mkl-fft==1.3.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-mock==4.0.3
-natsort==7.1.1
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.2
-nest-asyncio==1.5.1
-networkx==2.5
-notebook==6.2.0
-np-utils==0.5.12.1
-numpy==1.19.5
-oauthlib==3.1.1
-olefile==0.46
-opencv-python==4.4.0.44
-opt-einsum==3.3.0
-osqp==0.6.1
-package-name==0.1
-packaging==20.9
-panda==0.3.1
-pandas==1.1.5
-pandocfilters==1.4.3
-parso==0.8.2
-patsy==0.5.1
-pexpect==4.8.0
-pickleshare==0.7.5
-piexif==1.1.3
-pkginfo==1.7.0
-platformdirs==2.4.0
+Jinja2==3.0.3
+MarkupSafe==2.0.1
 plotly==5.6.0
-prometheus-client==0.9.0
-prompt-toolkit==3.0.20
-protobuf==3.18.1
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycosat==0.6.3
-Pygments==2.10.0
-PyJWT==1.7.1
-pyparsing==2.4.7
-pyreadr==0.3.5
-pyrsistent==0.17.3
-pysaliency==0.2.20
-python-dateutil==2.8.2
-pytz==2021.1
-pytz-deprecation-shim==0.1.0.post0
-PyWavelets==1.1.1
-PyYAML==5.4.1
-pyzmq==22.2.1
-qtconsole==5.0.3
-QtPy==1.9.0
-regressors==0.0.3
-requests==2.26.0
-requests-oauthlib==1.3.0
-rpy2==3.4.5
-ruamel.yaml==0.16.13
-ruamel.yaml.clib==0.2.2
-saliency==0.1.1
-schema==0.7.4
-scikit-image==0.17.2
-scikit-learn==0.24.1
-scipy==1.4.1
-scs==2.1.2
-seaborn==0.11.1
-Send2Trash==1.5.0
-shap==0.39.0
-sklearn==0.0
-slicer==0.0.7
-spgl1==0.0.2
-statsmodels==0.12.2
-tabulate==0.8.9
-tb-nightly==2.6.0a20210806
+six==1.16.0
 tenacity==8.0.1
-tensorboard==1.13.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
-tensorflow-tensorboard==0.4.0
-termcolor==1.1.0
-terminado==0.9.3
-testpath==0.4.4
-tf-estimator-nightly==2.7.0.dev2021092408
-tf-nightly==2.7.0.dev20210806
-tifffile==2020.9.3
-torch==1.6.0
-torchvision==0.7.0
-tornado==6.1
-traitlets==4.3.3
-tzdata==2021.5
-tzlocal==4.1
-urllib3==1.26.7
-vimpy==2.0.2.2
-virtualenv==20.8.1
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.2
-widgetsnbextension==3.5.1
-wrapt==1.12.1
+typing_extensions==4.1.1
+Werkzeug==2.0.3
 zipp==3.6.0
