--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,8 @@ six==1.16.0
 tenacity==8.0.1
 typing_extensions==4.1.1
 Werkzeug==2.0.3
+pandas==1.1.5
+numpy==1.19.5
+plotly-express==0.4.1
+
 zipp==3.6.0
